--- a/package.json
+++ b/package.json
@@ -1,41 +1,53 @@
 {
   "name": "ember-arg-types",
-  "version": "0.0.0",
-  "description": "The default blueprint for ember-cli addons.",
+  "version": "0.1.0",
+  "description": "PropType like decorators for Ember Glimmer component args",
   "keywords": [
     "ember-addon"
   ],
-  "repository": "",
+  "repository": "git@github.com:jkusa/ember-arg-types.git",
   "license": "MIT",
-  "author": "",
+  "author": "Jon Kilroy <jkusa7@gmail.com>",
   "directories": {
     "doc": "doc",
     "test": "tests"
   },
   "scripts": {
-    "build": "ember build",
+    "build": "ember build --environment=production",
+    "lint": "npm-run-all --aggregate-output --continue-on-error --parallel lint:*",
     "lint:hbs": "ember-template-lint .",
     "lint:js": "eslint .",
     "start": "ember serve",
-    "test": "ember test",
-    "test:all": "ember try:each"
+    "test": "npm-run-all lint:* test:*",
+    "test:ember": "ember test",
+    "test:ember-compatibility": "ember try:each",
+    "prepublishOnly": "ember ts:precompile",
+    "postpublish": "ember ts:clean"
   },
   "dependencies": {
-    "ember-cli-babel": "^7.13.0",
-    "ember-cli-htmlbars": "^4.2.0"
+    "ember-auto-import": "^1.5.3",
+    "ember-cli-babel": "^7.18.0",
+    "ember-cli-htmlbars": "^4.2.3",
+    "ember-cli-typescript": "^3.1.3",
+    "prop-types": "^15.7.2"
   },
   "devDependencies": {
-    "@ember/optional-features": "^1.1.0",
+    "@ember/optional-features": "^1.3.0",
     "@glimmer/component": "^1.0.0",
-    "babel-eslint": "^10.0.3",
+    "@glimmer/tracking": "^1.0.0",
+    "@types/ember": "^3.1.1",
+    "@types/ember-qunit": "^3.4.7",
+    "@types/ember__test-helpers": "^0.7.9",
+    "@types/prop-types": "^15.7.3",
+    "@types/qunit": "^2.9.0",
+    "@types/rsvp": "^4.0.3",
+    "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
-    "ember-auto-import": "^1.5.3",
-    "ember-cli": "~3.15.1",
+    "ember-cli": "~3.17.0",
     "ember-cli-dependency-checker": "^3.2.0",
-    "ember-cli-eslint": "^5.1.0",
-    "ember-cli-inject-live-reload": "^2.0.1",
+    "ember-cli-inject-live-reload": "^2.0.2",
     "ember-cli-sri": "^2.1.1",
-    "ember-cli-template-lint": "^1.0.0-beta.3",
+    "ember-cli-typescript-blueprints": "^3.0.0",
     "ember-cli-uglify": "^3.0.0",
     "ember-disable-prototype-extensions": "^1.1.3",
     "ember-export-application-global": "^2.0.1",
@@ -43,21 +55,33 @@
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-qunit": "^4.6.0",
     "ember-resolver": "^7.0.0",
-    "ember-source": "~3.15.0",
+    "ember-source": "~3.17.0",
     "ember-source-channel-url": "^2.0.1",
+    "ember-template-lint": "^2.4.0",
     "ember-try": "^1.4.0",
-    "eslint-plugin-ember": "^7.7.1",
-    "eslint-plugin-node": "^10.0.0",
+    "eslint": "^6.8.0",
+    "eslint-plugin-ember": "^7.10.1",
+    "eslint-plugin-node": "^11.0.0",
+    "husky": "^2.7.0",
     "loader.js": "^4.7.0",
-    "qunit-dom": "^0.9.2"
+    "npm-run-all": "^4.1.5",
+    "prettier": "1.19.1",
+    "pretty-quick": "^2.0.1",
+    "qunit-dom": "^1.1.0",
+    "typescript": "~3.7.5"
   },
   "engines": {
-    "node": "8.* || >= 10.*"
+    "node": "10.* || >= 12"
   },
   "ember": {
     "edition": "octane"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   }
 }
