--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ember-cli-babel": "^7.18.0",
     "ember-cli-htmlbars": "^4.2.3",
     "ember-cli-typescript": "^3.1.3",
+    "ember-get-config": "^0.2.4",
     "prop-types": "^15.7.2"
   },
   "devDependencies": {
