--- a/package.json
+++ b/package.json
@@ -25,17 +25,17 @@
     "postpublish": "ember ts:clean"
   },
   "dependencies": {
-    "ember-auto-import": "^1.5.3",
-    "ember-cli-babel": "^7.18.0",
-    "ember-cli-htmlbars": "^4.2.3",
+    "ember-auto-import": "^1.6.0",
+    "ember-cli-babel": "^7.22.1",
+    "ember-cli-htmlbars": "^5.3.1",
     "ember-cli-typescript": "^3.1.3",
     "ember-get-config": "^0.2.4",
     "prop-types": "^15.7.2"
   },
   "devDependencies": {
-    "@ember/optional-features": "^1.3.0",
-    "@glimmer/component": "^1.0.0",
-    "@glimmer/tracking": "^1.0.0",
+    "@ember/optional-features": "^2.0.0",
+    "@glimmer/component": "^1.0.1",
+    "@glimmer/tracking": "^1.0.1",
     "@types/ember": "^3.1.1",
     "@types/ember-qunit": "^3.4.7",
     "@types/ember__test-helpers": "^0.7.9",
@@ -44,31 +44,31 @@
     "@types/rsvp": "^4.0.3",
     "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
-    "ember-cli": "~3.17.0",
+    "ember-cli": "~3.21.2",
     "ember-cli-dependency-checker": "^3.2.0",
     "ember-cli-inject-live-reload": "^2.0.2",
     "ember-cli-sri": "^2.1.1",
+    "ember-cli-terser": "^4.0.0",
     "ember-cli-typescript-blueprints": "^3.0.0",
-    "ember-cli-uglify": "^3.0.0",
     "ember-disable-prototype-extensions": "^1.1.3",
     "ember-export-application-global": "^2.0.1",
     "ember-load-initializers": "^2.1.1",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-qunit": "^4.6.0",
-    "ember-resolver": "^7.0.0",
-    "ember-source": "~3.17.0",
-    "ember-source-channel-url": "^2.0.1",
-    "ember-template-lint": "^2.4.0",
+    "ember-resolver": "^8.0.2",
+    "ember-source": "~3.21.1",
+    "ember-source-channel-url": "^3.0.0",
+    "ember-template-lint": "^2.11.0",
     "ember-try": "^1.4.0",
-    "eslint": "^6.8.0",
-    "eslint-plugin-ember": "^7.10.1",
-    "eslint-plugin-node": "^11.0.0",
+    "eslint": "^7.8.0",
+    "eslint-plugin-ember": "^8.13.0",
+    "eslint-plugin-node": "^11.1.0",
     "husky": "^2.7.0",
     "loader.js": "^4.7.0",
     "npm-run-all": "^4.1.5",
     "prettier": "1.19.1",
     "pretty-quick": "^2.0.1",
-    "qunit-dom": "^1.1.0",
+    "qunit-dom": "^1.4.0",
     "typescript": "~3.7.5"
   },
   "engines": {
