--- a/package.json
+++ b/package.json
@@ -22,13 +22,15 @@
     "test:ember": "ember test",
     "test:ember-compatibility": "ember try:each",
     "prepublishOnly": "ember ts:precompile",
-    "postpublish": "ember ts:clean"
+    "postpublish": "ember ts:clean",
+    "prepack": "ember ts:precompile",
+    "postpack": "ember ts:clean"
   },
   "dependencies": {
     "ember-auto-import": "^1.6.0",
     "ember-cli-babel": "^7.22.1",
     "ember-cli-htmlbars": "^5.3.1",
-    "ember-cli-typescript": "^3.1.3",
+    "ember-cli-typescript": "^4.0.0",
     "ember-get-config": "^0.2.4",
     "prop-types": "^15.7.2"
   },
@@ -36,11 +38,12 @@
     "@ember/optional-features": "^2.0.0",
     "@glimmer/component": "^1.0.1",
     "@glimmer/tracking": "^1.0.1",
-    "@types/ember": "^3.1.1",
-    "@types/ember-qunit": "^3.4.7",
-    "@types/ember__test-helpers": "^0.7.9",
+    "@types/ember": "^3.16.0",
+    "@types/ember-qunit": "^3.4.9",
+    "@types/ember-resolver": "^5.0.9",
+    "@types/ember__test-helpers": "^1.7.2",
     "@types/prop-types": "^15.7.3",
-    "@types/qunit": "^2.9.0",
+    "@types/qunit": "^2.9.1",
     "@types/rsvp": "^4.0.3",
     "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
@@ -69,7 +72,7 @@
     "prettier": "1.19.1",
     "pretty-quick": "^2.0.1",
     "qunit-dom": "^1.4.0",
-    "typescript": "~3.7.5"
+    "typescript": "^4.0.3"
   },
   "engines": {
     "node": "10.* || >= 12"
