--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "ember-cli-babel": "^7.22.1",
     "ember-cli-htmlbars": "^5.3.1",
     "ember-cli-typescript": "^4.0.0",
-    "ember-get-config": "^0.2.4",
+    "ember-get-config": "^0.2.4 || ^0.3.0",
     "prop-types": "^15.7.2"
   },
   "devDependencies": {
