--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
   },
   "scripts": {
     "build": "ember build --environment=production",
-    "lint": "npm-run-all --aggregate-output --continue-on-error --parallel lint:*",
+    "lint": "npm-run-all --aggregate-output --continue-on-error --parallel 'lint:!(fix)'",
+    "lint:fix": "npm-run-all --aggregate-output --continue-on-error --parallel lint:*:fix",
     "lint:hbs": "ember-template-lint .",
-    "lint:js": "eslint .",
+    "lint:hbs:fix": "ember-template-lint . --fix",
+    "lint:js": "eslint . --cache",
+    "lint:js:fix": "eslint . --fix",
     "start": "ember serve",
-    "test": "npm-run-all lint:* test:*",
+    "test": "npm-run-all lint test:*",
     "test:ember": "ember test",
     "test:ember-compatibility": "ember try:each",
     "prepublishOnly": "ember ts:precompile",
@@ -27,51 +30,56 @@
     "postpack": "ember ts:clean"
   },
   "dependencies": {
-    "ember-auto-import": "^1.6.0",
-    "ember-cli-babel": "^7.22.1",
-    "ember-cli-htmlbars": "^5.3.1",
+    "ember-auto-import": "^1.10.1",
+    "ember-cli-babel": "^7.23.1",
+    "ember-cli-htmlbars": "^5.3.2",
     "ember-cli-typescript": "^4.0.0",
     "ember-get-config": "^0.2.4 || ^0.3.0",
     "prop-types": "^15.7.2"
   },
   "devDependencies": {
     "@ember/optional-features": "^2.0.0",
-    "@glimmer/component": "^1.0.2",
-    "@glimmer/tracking": "^1.0.2",
+    "@ember/test-helpers": "^2.2.0",
+    "@glimmer/component": "^1.0.3",
+    "@glimmer/tracking": "^1.0.3",
     "@types/ember": "^3.16.0",
-    "@types/ember-qunit": "^3.4.9",
+    "@types/ember-qunit": "^3.4.13",
     "@types/ember-resolver": "^5.0.9",
     "@types/ember__test-helpers": "^1.7.2",
     "@types/prop-types": "^15.7.3",
-    "@types/qunit": "^2.9.1",
+    "@types/qunit": "^2.11.1",
     "@types/rsvp": "^4.0.3",
     "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
-    "ember-cli": "~3.22.0",
+    "ember-cli": "~3.25.0",
     "ember-cli-dependency-checker": "^3.2.0",
     "ember-cli-inject-live-reload": "^2.0.2",
     "ember-cli-sri": "^2.1.1",
-    "ember-cli-terser": "^4.0.0",
+    "ember-cli-terser": "^4.0.1",
     "ember-cli-typescript-blueprints": "^3.0.0",
     "ember-disable-prototype-extensions": "^1.1.3",
     "ember-export-application-global": "^2.0.1",
-    "ember-load-initializers": "^2.1.1",
+    "ember-load-initializers": "^2.1.2",
     "ember-maybe-import-regenerator": "^0.1.6",
-    "ember-qunit": "^4.6.0",
+    "ember-page-title": "^6.2.1",
+    "ember-qunit": "^5.1.2",
     "ember-resolver": "^8.0.2",
-    "ember-source": "~3.22.0",
+    "ember-source": "~3.25.1",
     "ember-source-channel-url": "^3.0.0",
-    "ember-template-lint": "^2.14.0",
+    "ember-template-lint": "^2.18.1",
     "ember-try": "^1.4.0",
-    "eslint": "^7.11.0",
-    "eslint-plugin-ember": "^9.3.0",
+    "eslint": "^7.20.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-ember": "^10.2.0",
     "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
     "husky": "^2.7.0",
     "loader.js": "^4.7.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "1.19.1",
+    "prettier": "^2.2.1",
     "pretty-quick": "^2.0.1",
-    "qunit-dom": "^1.5.0",
+    "qunit": "^2.14.0",
+    "qunit-dom": "^1.6.0",
     "typescript": "^4.0.3"
   },
   "engines": {
