--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -5,7 +5,7 @@ on:
   push:
     # filtering branches here prevents duplicate builds from pull_request and push
     branches:
-      - master
+      - main
 
 env:
   CI: true
