--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,11 +66,11 @@ jobs:
       fail-fast: true
       matrix:
         ember-try-scenario:
-          - ember-lts-3.16
           - ember-lts-3.20
+          - ember-lts-3.24
           - ember-release
-          #- ember-beta
-          #- ember-canary
+          - ember-beta
+          - ember-canary
           - ember-classic
     steps:
       - uses: actions/checkout@v2
