--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "ember-cli-babel": "^7.26.6",
     "ember-cli-htmlbars": "^5.7.1",
     "ember-cli-typescript": "^4.0.0",
-    "ember-get-config": "^0.2.4 || ^0.3.0",
+    "ember-get-config": "^1.0.2",
     "prop-types": "^15.7.2"
   },
   "devDependencies": {
