--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   },
   "dependencies": {
     "@embroider/macros": "^1.8.1",
-    "ember-auto-import": "^1.11.3",
+    "ember-auto-import": "^2.4.2",
     "ember-cli-babel": "^7.26.6",
     "ember-cli-typescript": "^4.0.0",
     "ember-get-config": "^2.1.1",
@@ -84,7 +84,8 @@
     "pretty-quick": "^2.0.1",
     "qunit": "^2.16.0",
     "qunit-dom": "^1.6.0",
-    "typescript": "^4.0.3"
+    "typescript": "^4.0.3",
+    "webpack": "^5.73.0"
   },
   "engines": {
     "node": "12.* || 14.* || >= 16"
