--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "prepublishOnly": "ember ts:precompile",
     "postpublish": "ember ts:clean",
     "prepack": "ember ts:precompile",
-    "postpack": "ember ts:clean"
+    "postpack": "ember ts:clean",
+    "version": "auto-changelog -p --template=keepachangelog && git add CHANGELOG.md"
   },
   "dependencies": {
     "@embroider/macros": "^1.8.1",
@@ -52,7 +53,9 @@
     "@types/rsvp": "^4.0.3",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
+    "auto-changelog": "^2.4.0",
     "broccoli-asset-rev": "^3.0.0",
+    "cz-conventional-changelog": "^3.3.0",
     "ember-cli": "~3.28.4",
     "ember-cli-dependency-checker": "^3.2.0",
     "ember-cli-htmlbars": "^5.7.1",
@@ -98,6 +101,11 @@
   "husky": {
     "hooks": {
       "pre-commit": "pretty-quick --staged"
+    }
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
     }
   }
 }
