--- a/.npmignore
+++ b/.npmignore
@@ -14,8 +14,8 @@
 /.eslintignore
 /.eslintrc.js
 /.git/
+/.github/
 /.gitignore
-/.github
 /.prettierignore
 /.prettierrc.js
 /.template-lintrc.js
@@ -34,7 +34,10 @@
 # ember-try
 /.node_modules.ember-try/
 /bower.json.ember-try
+/npm-shrinkwrap.json.ember-try
 /package.json.ember-try
+/package-lock.json.ember-try
+/yarn.lock.ember-try
 
 # readme imgs
 /imgs
