--- a/package.json
+++ b/package.json
@@ -32,65 +32,81 @@
   },
   "dependencies": {
     "@embroider/macros": "^1.8.1",
-    "ember-auto-import": "^1.11.3",
-    "ember-cli-babel": "^7.26.6",
-    "ember-cli-typescript": "^4.0.0",
+    "ember-auto-import": "^2.4.2",
+    "ember-cli-babel": "^7.26.11",
+    "ember-cli-typescript": "^5.1.1",
     "ember-get-config": "^2.1.1",
     "prop-types": "^15.7.2"
   },
   "devDependencies": {
     "@ember/optional-features": "^2.0.0",
-    "@ember/test-helpers": "^2.4.2",
-    "@embroider/test-setup": "^0.43.5",
-    "@glimmer/component": "^1.0.4",
-    "@glimmer/tracking": "^1.0.4",
-    "@types/ember": "^3.16.0",
-    "@types/ember__test-helpers": "^1.7.2",
-    "@types/ember-qunit": "^3.4.13",
-    "@types/ember-resolver": "^5.0.9",
-    "@types/prop-types": "^15.7.3",
-    "@types/qunit": "^2.11.1",
-    "@types/rsvp": "^4.0.3",
-    "@typescript-eslint/eslint-plugin": "^5.4.0",
-    "@typescript-eslint/parser": "^5.4.0",
+    "@ember/test-helpers": "^2.8.1",
+    "@embroider/test-setup": "^1.8.3",
+    "@glimmer/component": "^1.1.2",
+    "@glimmer/tracking": "^1.1.2",
+    "@tsconfig/ember": "^1.0.1",
+    "@types/ember": "^4.0.1",
+    "@types/ember__application": "^4.0.1",
+    "@types/ember__array": "^4.0.2",
+    "@types/ember__component": "^4.0.10",
+    "@types/ember__controller": "^4.0.1",
+    "@types/ember__debug": "^4.0.1",
+    "@types/ember__engine": "^4.0.2",
+    "@types/ember__error": "^4.0.0",
+    "@types/ember__object": "^4.0.4",
+    "@types/ember__polyfills": "^4.0.0",
+    "@types/ember__routing": "^4.0.10",
+    "@types/ember__runloop": "^4.0.1",
+    "@types/ember__service": "^4.0.0",
+    "@types/ember__string": "^3.0.9",
+    "@types/ember__template": "^4.0.0",
+    "@types/ember__test": "^4.0.0",
+    "@types/ember__test-helpers": "^2.8.1",
+    "@types/ember__utils": "^4.0.1",
+    "@types/ember-qunit": "^5.0.1",
+    "@types/ember-resolver": "^5.0.11",
+    "@types/prop-types": "^15.7.5",
+    "@types/qunit": "^2.19.2",
+    "@types/rsvp": "^4.0.4",
+    "@typescript-eslint/eslint-plugin": "^5.37.0",
+    "@typescript-eslint/parser": "^5.37.0",
     "auto-changelog": "^2.4.0",
     "broccoli-asset-rev": "^3.0.0",
     "cz-conventional-changelog": "^3.3.0",
-    "ember-cli": "~3.28.4",
-    "ember-cli-dependency-checker": "^3.2.0",
-    "ember-cli-htmlbars": "^5.7.1",
+    "ember-cli": "~4.7.0",
+    "ember-cli-dependency-checker": "^3.3.1",
+    "ember-cli-htmlbars": "^6.1.0",
     "ember-cli-inject-live-reload": "^2.1.0",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-terser": "^4.0.2",
     "ember-cli-typescript-blueprints": "^3.0.0",
     "ember-disable-prototype-extensions": "^1.1.3",
-    "ember-export-application-global": "^2.0.1",
     "ember-load-initializers": "^2.1.2",
-    "ember-maybe-import-regenerator": "^0.1.6",
-    "ember-page-title": "^6.2.2",
-    "ember-qunit": "^5.1.4",
-    "ember-resolver": "^8.0.2",
-    "ember-source": "~3.28.0",
+    "ember-page-title": "^7.0.0",
+    "ember-qunit": "^5.1.5",
+    "ember-resolver": "^8.0.3",
+    "ember-source": "~4.7.0",
     "ember-source-channel-url": "^3.0.0",
-    "ember-template-lint": "^3.6.0",
-    "ember-try": "^1.4.0",
+    "ember-template-lint": "^4.14.0",
+    "ember-try": "^2.0.0",
     "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-ember": "^10.5.4",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-ember": "^11.0.6",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.4.1",
-    "eslint-plugin-qunit": "^6.2.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-qunit": "^7.3.1",
     "husky": "^2.7.0",
     "loader.js": "^4.7.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.3.2",
+    "prettier": "^2.7.1",
     "pretty-quick": "^2.0.1",
-    "qunit": "^2.16.0",
-    "qunit-dom": "^1.6.0",
-    "typescript": "^4.0.3"
+    "qunit": "^2.19.1",
+    "qunit-dom": "^2.0.0",
+    "typescript": "^4.8.3",
+    "webpack": "^5.74.0"
   },
   "engines": {
-    "node": "12.* || 14.* || >= 16"
+    "node": "14.* || >= 16"
   },
   "ember": {
     "edition": "octane"
