test: fixing compatibility tests

--- a/package.json
+++ b/package.json
@@ -40,10 +40,12 @@
   },
   "devDependencies": {
     "@ember/optional-features": "^2.0.0",
+    "@ember/string": "^3.1.1",
     "@ember/test-helpers": "^2.9.3",
     "@embroider/test-setup": "^1.8.3",
     "@glimmer/component": "^1.1.2",
     "@glimmer/tracking": "^1.1.2",
+    "@glint/template": "^1.1.0",
     "@tsconfig/ember": "^1.0.1",
     "@types/ember": "^4.0.1",
     "@types/ember__application": "^4.0.1",
@@ -87,7 +89,7 @@
     "ember-source": "~4.7.0",
     "ember-source-channel-url": "^3.0.0",
     "ember-template-lint": "^4.14.0",
-    "ember-try": "^2.0.0",
+    "ember-try": "^3.0.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-ember": "^11.0.6",
