--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@types/ember__engine": "^4.0.2",
     "@types/ember__error": "^4.0.0",
     "@types/ember__object": "^4.0.4",
+    "@types/ember__owner": "^4.0.3",
     "@types/ember__polyfills": "^4.0.0",
     "@types/ember__routing": "^4.0.10",
     "@types/ember__runloop": "^4.0.1",
@@ -64,8 +65,6 @@
     "@types/ember__template": "^4.0.0",
     "@types/ember__test": "^4.0.0",
     "@types/ember__utils": "^4.0.1",
-    "@types/ember-qunit": "^5.0.1",
-    "@types/ember-resolver": "^5.0.11",
     "@types/prop-types": "^15.7.5",
     "@types/qunit": "^2.19.2",
     "@types/rsvp": "^4.0.4",
@@ -84,8 +83,8 @@
     "ember-disable-prototype-extensions": "^1.1.3",
     "ember-load-initializers": "^2.1.2",
     "ember-page-title": "^7.0.0",
-    "ember-qunit": "^5.1.5",
-    "ember-resolver": "^8.0.3",
+    "ember-qunit": "^6.1.1",
+    "ember-resolver": "^8.1.0",
     "ember-source": "~4.7.0",
     "ember-source-channel-url": "^3.0.0",
     "ember-template-lint": "^4.14.0",
